<resources>
    <string name="app_name">Agenda_Pessoal</string>
    <string name="nome_app">Nome da Aplicação</string>
    <string name="nome">Nome *</string>
    <string name="telefone">Telefone *</string>
    <string name="email">Email *</string>
    <string name="senha">Senha *</string>
    <string name="confirme_a_senha">Confirme a Senha *</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="realize_seu_login">Realize seu login!</string>
    <string name="data_aqui">DATA AQUI</string>
    <string name="novo_evento">Novo Evento</string>
    <string name="t_titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="nao_ha_tarefas">Não há Tarefas</string>
    <string name="tarefas">Tarefas</string>
    <string name="compromissos">Compromissos</string>
    <string name="nao_ha_compromissos">Não há Compromissos</string>
    <string name="t_titulo_star">Título *</string>
    <string name="data_star">Data *</string>
    <string name="hora_star">Hora *</string>
    <string name="campos_obrigatorios">* Campos Obrigatórios</string>
    <string name="nova_tarefa">Nova Tarefa</string>
    <string name="editar">Editar</string>
    <string name="editar_tarefa">Editar Tarefa</string>
    <string name="crie_sua_conta">Crie sua conta!</string>
    <string name="ja_possui_registro">Já possui registro?</string>
    <string name="clique_aqui">Clique aqui!</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="finalizar_evento">Finalizar Evento</string>
    <string name="salvar">Salvar</string>
</resources>