<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/azul"
        android:contentDescription="@string/app_name"
        android:scaleType="center" />

    <EditText
        android:id="@+id/dialog_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/dialog_conf_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/confirme_a_senha"
        android:inputType="textPassword"
        android:minHeight="48dp" />
</LinearLayout>
