<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.A_EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-57dp"
        tools:layout_editor_absoluteY="-35dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/azul"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_backEditProfileToProfile"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="357dp"
                android:backgroundTint="@color/azul"
                android:onClick="returnToProfile"
                app:icon="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="143dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/editar_perfil"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name_edit_profile"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/stl_et"
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_email_edit_profile"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/stl_et"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textPersonName|textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/et_phone_edit_profile"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/stl_et"
                android:ems="10"
                android:hint="@string/telefone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="13"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/et_password_edit_profile"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/stl_et"
                android:ems="10"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_confPassword_edit_profile"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:background="@drawable/stl_et"
                android:ems="10"
                android:hint="@string/confirme_a_senha"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_cadastrar_edit_profile"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/azul"
                android:onClick="editUser"
                android:text="@string/editar"
                app:cornerRadius="15dp"
                app:strokeColor="@color/azul"
                app:strokeWidth="2dp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="253dp"
                android:layout_marginTop="85dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/campos_obrigatorios"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</RelativeLayout>