<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/et_confirmarSenha"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.A_Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-57dp"
        tools:layout_editor_absoluteY="-35dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/azul"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="357dp"
                android:backgroundTint="@color/azul"
                android:onClick="returnToHome"
                app:icon="@drawable/icon_voltar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="143dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="Crie sua conta!"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_nome"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/stl_et"
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/stl_et"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/et_telefone"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/stl_et"
                android:ems="10"
                android:hint="@string/telefone"
                android:inputType="phone"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/stl_et"
                android:ems="10"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/et_confPassword"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:background="@drawable/stl_et"
                android:ems="10"
                android:hint="@string/confirme_a_senha"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_cadastrar"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/azul"
                android:onClick="registerUser"
                android:text="@string/cadastrar"
                app:cornerRadius="15dp"
                app:strokeColor="@color/azul"
                app:strokeWidth="2dp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>