<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.A_Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-57dp"
        tools:layout_editor_absoluteY="-35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/azul"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_backLoginToHome"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/azul"
                android:onClick="returnToHome"
                app:icon="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="284dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/realize_seu_login"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                />


            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/stl_et"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textPersonName|textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck" />


            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/stl_et"
                android:ems="10"
                android:hint="@string/senha"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/azul"
                android:onClick="openEvent"
                android:text="@string/entrar"
                app:cornerRadius="15dp"
                app:strokeColor="@color/azul"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Não possui registro?"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_alreadyRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minHeight="48dp"
                android:onClick="openRegister"
                android:text="Clique aqui!"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="252dp"
                android:layout_marginTop="108dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/campos_obrigatorios"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>