<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.A_EditTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-57dp"
        tools:layout_editor_absoluteY="-35dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/azul"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_backEditToViewTask"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="330dp"
                android:backgroundTint="@color/azul"
                android:onClick="returnEditTaskToViewTask"
                app:icon="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="367dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/editar_tarefa"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_titleEditTask"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/stl_et"
                android:ems="10"
                android:hint="@string/t_titulo_star"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/et_descriptionEditTask"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/stl_et"
                android:ems="10"
                android:hint="@string/descricao"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Seleção de prioridade *"
            android:textAlignment="center"
            android:textColor="#D5000000"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rg_newTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtn_hight_priority_edit_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Alta" />

            <RadioButton
                android:id="@+id/rbtn_medium_priority_edit_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="7dp"
                android:text="Média" />

            <RadioButton
                android:id="@+id/rbtn_low_priority_edit_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="14dp"
                android:text="Baixa" />

            <RadioButton
                android:id="@+id/rbtn_no_priority_edit_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Nula" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/btn_editTask"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/azul"
                android:onClick="updateTask"
                android:text="@string/salvar"
                app:cornerRadius="15dp"
                app:strokeColor="@color/azul"
                app:strokeWidth="2dp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="252dp"
                android:layout_marginTop="108dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/campos_obrigatorios"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</RelativeLayout>